--- a/test.html
+++ b/test.html
@@ -160,7 +160,7 @@
     text-align:center; white-space:normal; overflow-wrap:anywhere;
     font-family: var(--subs-font-family);
     font-size: var(--subs-font); font-weight: var(--subs-weight);
-    letter-spacing: var (--subs-tracking);
+    letter-spacing: var(--subs-tracking); /* ← fix */
     line-height: var(--subs-line);
     text-transform: var(--subs-transform);
     color:#fff; opacity:.95;
@@ -227,17 +227,50 @@
     pointer-events:none;
   }
 
+  /* ===== FAB WhatsApp (identico a IG; terza posizione nello stack) ===== */
+  .fab-wa{
+    --fab-size: clamp(36px, 10cqw, 48px);
+    --fab-edge: clamp(10px, 2cqw, 16px);
+    --fab-radius: 12px;
+
+    position:absolute;
+    top: calc(var(--fab-edge) + (var(--fab-size) + var(--fab-stack-gap)) * 2);
+    left: var(--fab-edge);
+    width:var(--fab-size); height:var(--fab-size);
+    display:grid; place-items:center;
+
+    border: 1px solid rgba(0,0,0,.08);
+    border-radius: var(--fab-radius);
+    background:#fff; color:#111;
+    box-shadow: 0 2px 4px rgba(0,0,0,.18), 0 8px 16px rgba(0,0,0,.16);
+    cursor:pointer; z-index:10;
+
+    transition: transform .15s ease, box-shadow .15s ease,
+                background-color .15s ease, opacity .15s ease, border-color .15s ease;
+  }
+  .fab-wa:hover{ transform: translateY(-1px); background:#f5f6f8; box-shadow: 0 3px 6px rgba(0,0,0,.20), 0 12px 20px rgba(0,0,0,.18); }
+  .fab-wa:active{ transform: translateY(0); background:#eceef2; }
+  .fab-wa:focus-visible{ outline: 3px solid rgba(66,133,244,.55); outline-offset: 2px; }
+  .fab-wa svg{
+    width: calc(var(--fab-size) * .56);
+    height: calc(var(--fab-size) * .56);
+    fill: currentColor;
+  }
+
   /* ===== FABs più piccoli su mobile (container) ===== */
   @container (max-width: 520px){
     .fab-share,
-    .fab-ig{
+    .fab-ig,
+    .fab-wa{
       --fab-size: clamp(24px, 7cqw, 34px);
       --fab-edge: clamp(8px, 1.6cqw, 12px);
       --fab-radius: 10px;
     }
     .fab-ig{ top: calc(var(--fab-edge) + var(--fab-size) + var(--fab-stack-gap)); }
+    .fab-wa{ top: calc(var(--fab-edge) + (var(--fab-size) + var(--fab-stack-gap)) * 2); }
     .fab-share svg,
-    .fab-ig   svg{
+    .fab-ig   svg,
+    .fab-wa   svg{
       width: calc(var(--fab-size) * .50);
       height: calc(var(--fab-size) * .50);
     }
@@ -380,6 +413,14 @@
         <rect x="3" y="3" width="18" height="18" rx="5" ry="5"></rect>
         <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
         <circle cx="17.5" cy="6.5" r="1.2"></circle>
+      </svg>
+    </button>
+
+    <!-- FAB WhatsApp (apre canale WA) -->
+    <button id="waFab" class="fab-wa" title="Apri Canale WhatsApp" aria-label="Apri Canale WhatsApp">
+      <svg viewBox="0 0 24 24" aria-hidden="true">
+        <!-- icona WhatsApp semplificata -->
+        <path d="M20 12.04c0 4.42-3.58 8-8 8-1.4 0-2.71-.36-3.85-.99L4 20l.98-4.07A7.95 7.95 0 0 1 4 12.04c0-4.42 3.58-8 8-8s8 3.58 8 8zm-4.53-1.24c-.08-.17-.29-.27-.6-.47s-1.85-.91-2.14-1.01-.5-.15-.71.15-.82 1.01-1.01 1.22-.37.23-.68.08c-.31-.15-1.3-.48-2.48-1.53-.92-.82-1.54-1.83-1.72-2.14-.18-.31 0-.48.14-.63.14-.14.31-.37.46-.55.15-.18.2-.31.31-.52.1-.21.05-.39-.02-.55-.08-.17-.71-1.71-.97-2.34-.25-.6-.5-.52-.71-.53l-.6-.01c-.2 0-.52.08-.79.39-.27.31-1.04 1.02-1.04 2.48s1.07 2.88 1.22 3.08c.15.2 2.1 3.2 5.08 4.49.71.31 1.27.49 1.7.63.71.23 1.36.2 1.87.12.57-.08 1.85-.76 2.12-1.49.26-.73.26-1.36.18-1.49z"/>
       </svg>
     </button>
   </div>
@@ -561,12 +602,14 @@ function layoutFABs(){
   const stage = document.querySelector('.stage');
   const share = document.getElementById('shareFab');
   const ig    = document.getElementById('igFab');
+  const wa    = document.getElementById('waFab');
   const md    = document.getElementById('matchdayBadge');
-  if(!stage || !share || !ig || !md) return;
+  if(!stage || !share || !ig || !wa || !md) return;
 
   // reset a default (CSS) per misurare correttamente
   share.style.top = '';
   ig.style.top = '';
+  wa.style.top = '';
 
   const srect = stage.getBoundingClientRect();
   const mdRect = md.getBoundingClientRect();
@@ -585,7 +628,8 @@ function layoutFABs(){
     // posiziona i FAB subito sotto alla macchia, con un piccolo margine
     const targetTop = Math.round(mdRect.bottom - srect.top + 8);
     share.style.top = targetTop + 'px';
-    ig.style.top    = (targetTop + fabSize + gap) + 'px';
+    ig.style.top    = (targetTop + (fabSize + gap) * 1) + 'px';
+    wa.style.top    = (targetTop + (fabSize + gap) * 2) + 'px';
   }
 }
 
@@ -601,6 +645,13 @@ function playerNode(obj,x,y){
   const badge=document.createElement('span'); badge.className='badge'; badge.textContent=`${obj.num}.${SURNAME(obj.name)}`;
   div.appendChild(badge);
   return div;
+}
+function canonicalFormation(name){
+  const raw = String(name||"").trim().toLowerCase().replace(/^['’]/,'');
+  const norm = raw.replace(/[–—−]/g, "-");
+  if (FORMATIONS_UV[norm]) return norm;
+  const digits = norm.replace(/[^0-9]/g, "");
+  return FORMATION_ALIASES[digits] || "3-4-1-2";
 }
 function render(byNum, modulo="3412"){
   const layer=document.getElementById('players'); layer.innerHTML='';
@@ -679,15 +730,18 @@ function render(byNum, modulo="3412"){
 document.addEventListener('DOMContentLoaded', ()=>{
   const fab = document.getElementById('shareFab');
   const ig  = document.getElementById('igFab');
+  const wa  = document.getElementById('waFab');
   const stage = document.querySelector('.stage');
 
   async function stageToBlob(){
     const prevVis = fab.style.visibility;
     const prevVisIG = ig ? ig.style.visibility : '';
+    const prevVisWA = wa ? wa.style.visibility : '';
 
     // nascondo i FAB durante lo scatto
     fab.style.visibility = 'hidden';
     if(ig) ig.style.visibility = 'hidden';
+    if(wa) wa.style.visibility = 'hidden';
     stage.classList.add('is-capturing');
 
     /* qualità alta + downscale */
@@ -722,6 +776,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
     stage.classList.remove('is-capturing');
     fab.style.visibility = prevVis || 'visible';
     if(ig) ig.style.visibility = prevVisIG || 'visible';
+    if(wa) wa.style.visibility = prevVisWA || 'visible';
 
     return await new Promise(res=> out.toBlob(b=>res(b), 'image/png', 0.95));
   }
@@ -767,8 +822,14 @@ document.addEventListener('DOMContentLoaded', ()=>{
     }
   }
 
+  const WHATSAPP_CHANNEL_URL = 'https://whatsapp.com/channel/0029Vb6QY82I7BeLPf1qXZ2E';
+  function openWhatsAppChannel(){
+    window.open(WHATSAPP_CHANNEL_URL, '_blank', 'noopener');
+  }
+
   fab.addEventListener('click', shareOrDownload, { passive:true });
   ig.addEventListener('click', openInstagram, { passive:true });
+  wa.addEventListener('click', openWhatsAppChannel, { passive:true });
 });
 </script>
 </body>
